src/grammar/.antlr/TyCParser.py
# Generated from /workspace/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'++'", "'--'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'{'", "'}'", 
                     "'('", "')'", "';'", "','", "':'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT", "FOR", "IF", "INT", "RETURN", 
                      "STRING", "STRUCT", "SWITCH", "VOID", "WHILE", "INC", 
                      "DEC", "OR", "AND", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "NOT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMI", 
                      "COMMA", "COLON", "ID", "FLOAT_LIT", "INT_LIT", "DOT", 
                      "STRING_LIT", "BLOCK_COMMENT", "LINE_COMMENT", "WS", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_list_declaration = 1
    RULE_declaration = 2
    RULE_struct_declaration = 3
    RULE_list_struct_member = 4
    RULE_struct_member = 5
    RULE_function_declaration = 6
    RULE_return_type = 7
    RULE_parameter_list = 8
    RULE_parameter_decl = 9
    RULE_type_spec = 10
    RULE_list_statement = 11
    RULE_statement = 12
    RULE_accessed = 13
    RULE_var_statement = 14
    RULE_assign_statement = 15
    RULE_lvalue = 16
    RULE_lvalue_base = 17
    RULE_func_call = 18
    RULE_assignment_expr = 19
    RULE_if_statement = 20
    RULE_while_statement = 21
    RULE_for_statement = 22
    RULE_for_init = 23
    RULE_for_cond = 24
    RULE_for_update = 25
    RULE_assignment_update = 26
    RULE_incdec_statement = 27
    RULE_switch_statement = 28
    RULE_switch_cases = 29
    RULE_switch_default = 30
    RULE_default_section = 31
    RULE_break_statement = 32
    RULE_continue_statement = 33
    RULE_return_statement = 34
    RULE_block_statement = 35
    RULE_expression_statement = 36
    RULE_expression = 37
    RULE_logical_or_expr = 38
    RULE_logical_and_expr = 39
    RULE_equality_expr = 40
    RULE_relational_expr = 41
    RULE_additive_expr = 42
    RULE_multiplicative_expr = 43
    RULE_unary_expr = 44
    RULE_postfix_incdec_any = 45
    RULE_indec_expr = 46
    RULE_incdec_target = 47
    RULE_paren_expr = 48
    RULE_postfix_expr = 49
    RULE_member_expr = 50
    RULE_call_expr = 51
    RULE_call_base = 52
    RULE_argument_list = 53
    RULE_primary = 54
    RULE_literal = 55
    RULE_struct_literal = 56

    ruleNames =  [ "program", "list_declaration", "declaration", "struct_declaration", 
                   "list_struct_member", "struct_member", "function_declaration", 
                   "return_type", "parameter_list", "parameter_decl", "type_spec", 
                   "list_statement", "statement", "accessed", "var_statement", 
                   "assign_statement", "lvalue", "lvalue_base", "func_call", 
                   "assignment_expr", "if_statement", "while_statement", 
                   "for_statement", "for_init", "for_cond", "for_update", 
                   "assignment_update", "incdec_statement", "switch_statement", 
                   "switch_cases", "switch_default", "default_section", 
                   "break_statement", "continue_statement", "return_statement", 
                   "block_statement", "expression_statement", "expression", 
                   "logical_or_expr", "logical_and_expr", "equality_expr", 
                   "relational_expr", "additive_expr", "multiplicative_expr", 
                   "unary_expr", "postfix_incdec_any", "indec_expr", "incdec_target", 
                   "paren_expr", "postfix_expr", "member_expr", "call_expr", 
                   "call_base", "argument_list", "primary", "literal", "struct_literal" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT=7
    FOR=8
    IF=9
    INT=10
    RETURN=11
    STRING=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    INC=17
    DEC=18
    OR=19
    AND=20
    EQ=21
    NEQ=22
    LE=23
    GE=24
    LT=25
    GT=26
    ASSIGN=27
    PLUS=28
    MINUS=29
    MUL=30
    DIV=31
    MOD=32
    NOT=33
    LBRACE=34
    RBRACE=35
    LPAREN=36
    RPAREN=37
    SEMI=38
    COMMA=39
    COLON=40
    ID=41
    FLOAT_LIT=42
    INT_LIT=43
    DOT=44
    STRING_LIT=45
    BLOCK_COMMENT=46
    LINE_COMMENT=47
    WS=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_declaration(self):
            return self.getTypedRuleContext(TyCParser.List_declarationContext,0)


        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.list_declaration()
            self.state = 115
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(TyCParser.DeclarationContext,0)


        def list_declaration(self):
            return self.getTypedRuleContext(TyCParser.List_declarationContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_declaration




    def list_declaration(self):

        localctx = TyCParser.List_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_declaration)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.declaration()
                self.state = 118
                self.list_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declaration(self):
            return self.getTypedRuleContext(TyCParser.Struct_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(TyCParser.Function_declarationContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_declaration




    def declaration(self):

        localctx = TyCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.struct_declaration()
                pass
            elif token in [7, 10, 12, 15, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.function_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def list_struct_member(self):
            return self.getTypedRuleContext(TyCParser.List_struct_memberContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_declaration




    def struct_declaration(self):

        localctx = TyCParser.Struct_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_struct_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(TyCParser.STRUCT)
            self.state = 128
            self.match(TyCParser.ID)
            self.state = 129
            self.match(TyCParser.LBRACE)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023260800) != 0):
                self.state = 130
                self.list_struct_member()


            self.state = 133
            self.match(TyCParser.RBRACE)
            self.state = 134
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_struct_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_member(self):
            return self.getTypedRuleContext(TyCParser.Struct_memberContext,0)


        def list_struct_member(self):
            return self.getTypedRuleContext(TyCParser.List_struct_memberContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_struct_member




    def list_struct_member(self):

        localctx = TyCParser.List_struct_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_struct_member)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.struct_member()
                self.state = 137
                self.list_struct_member()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.struct_member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(TyCParser.Type_specContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_member




    def struct_member(self):

        localctx = TyCParser.Struct_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_struct_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.type_spec()
            self.state = 143
            self.match(TyCParser.ID)
            self.state = 144
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(TyCParser.Block_statementContext,0)


        def return_type(self):
            return self.getTypedRuleContext(TyCParser.Return_typeContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(TyCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_function_declaration




    def function_declaration(self):

        localctx = TyCParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 146
                self.return_type()


            self.state = 149
            self.match(TyCParser.ID)
            self.state = 150
            self.match(TyCParser.LPAREN)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023260800) != 0):
                self.state = 151
                self.parameter_list()


            self.state = 154
            self.match(TyCParser.RPAREN)
            self.state = 155
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def type_spec(self):
            return self.getTypedRuleContext(TyCParser.Type_specContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_return_type




    def return_type(self):

        localctx = TyCParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_type)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(TyCParser.VOID)
                pass
            elif token in [7, 10, 12, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.type_spec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Parameter_declContext)
            else:
                return self.getTypedRuleContext(TyCParser.Parameter_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_parameter_list




    def parameter_list(self):

        localctx = TyCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.parameter_decl()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 162
                self.match(TyCParser.COMMA)
                self.state = 163
                self.parameter_decl()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_spec(self):
            return self.getTypedRuleContext(TyCParser.Type_specContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_parameter_decl




    def parameter_decl(self):

        localctx = TyCParser.Parameter_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.type_spec()
            self.state = 170
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_type_spec




    def type_spec(self):

        localctx = TyCParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023260800) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(TyCParser.StatementContext,0)


        def list_statement(self):
            return self.getTypedRuleContext(TyCParser.List_statementContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_statement




    def list_statement(self):

        localctx = TyCParser.List_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_statement)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.statement()
                self.state = 175
                self.list_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_statement(self):
            return self.getTypedRuleContext(TyCParser.Assign_statementContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def var_statement(self):
            return self.getTypedRuleContext(TyCParser.Var_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(TyCParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(TyCParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(TyCParser.For_statementContext,0)


        def switch_statement(self):
            return self.getTypedRuleContext(TyCParser.Switch_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(TyCParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(TyCParser.Continue_statementContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(TyCParser.Block_statementContext,0)


        def expression_statement(self):
            return self.getTypedRuleContext(TyCParser.Expression_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(TyCParser.Return_statementContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_statement




    def statement(self):

        localctx = TyCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.assign_statement()
                self.state = 181
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.var_statement()
                self.state = 184
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 187
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 188
                self.for_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 189
                self.switch_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 190
                self.break_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 191
                self.continue_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 192
                self.block_statement()
                pass
